--- a/avalehtstyle.css
+++ b/avalehtstyle.css
@@ -1,9 +1,12 @@
 div#infotekst{
     align-items: center;
-    margin-top: 150px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 24px;
     color: white;
+    text-align: center;
+  }
+  .madalamal{
+    margin-top: 150px;
   }
   img#piltnupp{
     width: 300px;
@@ -63,4 +66,5 @@ div#infotekst{
   .keskelvasakul:hover .overlay{
     opacity: 0.5;
   }
+
  
