--- a/loomad.css
+++ b/loomad.css
@@ -2,32 +2,79 @@ div.gallery {
     margin-top: 100px;
     position:absolute;
     left: 50%;
-    margin-left: -610px;
+    margin-left: -610px; 
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-div.animal {
+
+.animal {
+    color: white;
     margin: 10px;
     float: left;
-    width: 385px;
-    
+    background-image: var(--bg);
+    background-size: cover;
+    padding: 8rem 0 0;
+    width: 45ch;
+    border-radius: .3rem;
+    overflow: hidden;
+
+    transition: transform 500ms ease;
 }
 
-/*div.animal:hover {
-    border: 1px solid #777;
-}*/
-
-div.animal img {
-    width: 100%;
-    height: 257px;
-}
-div.desc {
-    text-align: left;
-    color: white;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 20px;
+.animal:hover {
+    transform: scale(1.01);
 }
 
-div.desc p {
-    font-size: 15px;
-    margin: 0px;
-    
+.content {
+    --padding: 1.5rem;
+    padding: var(--padding);
+    background: linear-gradient(
+        hsl(0 0% 0% / 0),
+        hsl(0 0% 0% / 0.2) 20%,
+        hsl(0 0% 0% / 0.8));
+    transform: translateY(45%);
+    transition: transform 500ms ease;
+
+}
+
+.animal:hover .content {
+    transform: translateY(0%);
+    transition-delay: 400ms;
+
+}
+
+.content > *:not(.name) {
+    opacity: 0;
+    transition: opacity 500ms linear;
+}
+
+.animal:hover .content > * {
+    opacity: 1;
+    transition-delay: 700ms;
+}
+
+.name {
+    position: relative;
+    width: max-content;
+}
+.name::after {
+    content: "";
+    position: absolute;
+    left: calc(var(--padding) * -1);
+    bottom: -5px;
+    height: 6px;
+    width: calc(100% + var(--padding));
+    background: #FCD733;
+    transform: scaleX(0);
+    transform-origin: left;
+
+    transition: transform 500ms ease;
+
+}
+
+.animal:hover .name::after {
+    transform: scaleX(1);
+}
+
+.desc {
+    padding-top: 0;
 }
