--- a/avalehtstyle.css
+++ b/avalehtstyle.css
@@ -2,7 +2,7 @@ div#infotekst{
     align-items: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 24px;
-    color: #1f3617;
+    color: black;
     text-align: center;
   }
   .madalamal{
