--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 h1 {
-  color: #1f3617;
+  color: white;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .taustapilt {
   /* background-image: url('pildid/taust.jpg');
   background-size: auto;
   background-attachment: fixed; */
-  background-color: #CEEDB6;
+  background-color: #e8e8cc;
 }
 div#banner { 
   z-index: 1;
@@ -14,7 +14,7 @@ div#banner {
   overflow: hidden;
   top: 0; 
   left: 0; 
-  background-color:#b3d9a5; 
+  background-color:#116530; 
   width: 100%; 
 }
 div#banner-content { 
@@ -48,7 +48,7 @@ a {
 }
 a#nupp {
   text-decoration: none;
-  color:#1f3617;
+  color:white;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 32px;
   padding-left: 20px;
@@ -56,7 +56,7 @@ a#nupp {
 }
 a:visited#nupp {
   size: 32px;
-  color:#1f3617;
+  color:white;
   font-family: Impact, 'Arial Narrow Bold', sans-serif;
 }
 td#kassid{
