--- a/avalehtstyle.css
+++ b/avalehtstyle.css
@@ -13,7 +13,7 @@ div#infotekst{
     height: 300px;
   }
   table#loomadenupud{
-    margin-top: 60px;
+    /* margin-top: 60px; */
     width: 100%
   }
   .keskelvasakul{
