--- a/loomad.css
+++ b/loomad.css
@@ -1,19 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap');
+
 body {
     margin-top: 100px;
+    font-family: Finger Paint;
 }
 div.gallery {
     /* left: 50%; */
     /* margin-left: -47.5%; */
     margin: auto;
-    height: fit-content;
+    overflow: visible;
     border-top: 5px dotted #0B4619;
     width: 95%;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: Finger Paint;
 }
 .pildid {
     position: relative;
-    left: 50%;
     width: 98%;
+    left: 50%;
     margin-left: -48%;
 }
 .title {
@@ -21,6 +24,7 @@ div.gallery {
     margin: 15px 0px 5px 30px;
     font-size: 6ch;
     padding-bottom: 20px;
+    font-family: Finger Paint;
 }
 .animal {
     color: white;
