--- a/avalehtstyle.css
+++ b/avalehtstyle.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap');
+
 div.infotekst{
     align-items: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: Finger Paint;
     font-size: 24px;
-    color: black;
+    color: #116530; 
     text-align: center;
   }
   div#madalamal{
