header korda, infolehe paigutus, fondid

--- a/info.css
+++ b/info.css
@@ -1,30 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap');
-
-body {
-    margin-top: 100px;
-    font-family: Finger Paint;
-}
 div.gallery {
-    /* left: 50%; */
-    /* margin-left: -47.5%; */
     margin: auto;
     overflow: visible;
     border-top: 5px dotted #0B4619;
     width: 95%;
-    font-family: Finger Paint;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
 }
-.pildid {
+.gallery > * {
+    flex: 1 1 300px;
+}
+/* .pildid {
     position: relative;
     width: 98%;
     left: 50%;
     margin-left: -48%;
-}
+} */
 .title {
     color: #116530;
     margin: 15px 0px 5px 30px;
     font-size: 6ch;
     padding-bottom: 20px;
-    font-family: Finger Paint;
 }
 .info {
     color: white;
@@ -32,6 +29,7 @@ div.gallery {
     float: left;
     background-image: var(--bg);
     background-size: cover;
+    background-position: center;
     padding: 8rem 0 0;
     width: 30%;
     border-radius: .3rem;
