--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
-h1 {
-  color: white;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Finger+Paint&family=Trade+Winds&display=swap');
+
 html, body{
   overflow-x: hidden;
   margin: 0; 
   padding: 0;
+  font-family: Finger Paint;
 }
 .taustapilt {
   background-color: #e8e8cc;
